2004-07-10  Daniel Jacobowitz  <dan@debian.org>

	* config/i386/i386.c (override_options): Pick a 64-bit CPU
	for the default tuning if TARGET_64BIT.

2004-07-06 Jan Beulich <jbeulich@novell.com>

	* varasm.c (asm_output_bss): Don't declare unless BSS_SECTION_ASM_OP.
                                                                                
        * expmed.c (emit_store_flag): Also special-case double-word
        (in-)equality comparison against -1.

	* config/i386/i386.c (ix86_gimplify_va_arg): Don't need temporary for
	passing arguments the containers for which are registers.

	* calls.c (emit_library_call_value_1): Use mode of function parameter
	rather than that of argument since constants have none.

2004-07-08  Alexandre Oliva  <aoliva@redhat.com>

	Introduce H8SX support.
	* expr.c (expand_strcpy): Renamed and moved to...
	* builtins.c (expand_movstr): ... here.  Tweak.
	(expand_builtin_strcpy): Adjust.  Use movstr if len can't be
	computed or has side effects.
	(expand_builtin_stpcpy): Likewise.  Use strcpy if return value is
	unused, or if mempcpy fails.  Adjust the return value in the
	latter case.  Use movstr if everything else fails.
	* doc/md.texi (movstr): Document.
	(movmemM, clrmemM): Fix explanation of memory block operands.
	* config/h8300/h8300.md (stpcpy): Renamed to...
	(movstr): ... this.  Adjust.
	2004-07-07  Alexandre Oliva  <aoliva@redhat.com>
	* config/h8300/h8300.md: Rename movstr*, except for movstrict*, to
	movmem* and clrstr* to clrmem*.
	2004-06-27  Alexandre Oliva  <aoliva@redhat.com>
	* config/h8300/h8300.c (h8300_reg_class_from_letter): Map 'D' to
	GENERAL_REGS, always.
	(h8300_swap_into_er6, h8300_swap_into_er6): Handle the case of
	getting the stack pointer as addr.
	* config/h8300/h8300.h (PREDICATE_CODES): Remove constant rtxes
	from general_operand_dst.
	* config/h8300/h8300.md (movmd_internal_normal): New, normal-mode
	variant of...
	(movmd_internal): ... this.  Add modes to operands.  Disparage `D'