@@ -983,6 +983,12 @@ i[34567]86-*-solaris2*)
 		tm_file="$tm_file tm-dwarf2.h"
 		;;
 	esac
+	case ${target} in
+	*-*-solaris2.1[0-9])
+		tm_file="${tm_file} i386/x86-64.h i386/sol2-10.h"
+		tm_defines="${tm_defines} TARGET_BI_ARCH=1"
+		;;
+	esac
 	extra_parts="crt1.o crti.o crtn.o gcrt1.o gmon.o crtbegin.o crtend.o"
 	case ${enable_threads}:${have_pthread_h}:${have_thread_h} in
 	  no:*:*) ;;
